--- a/style.css
+++ b/style.css
@@ -1614,6 +1614,8 @@ a {
     margin: 0 auto;
     margin-top: 85px;
     margin-bottom: 85px; }
+  .testimonial-video:last-child video {
+    margin-bottom: 200px; }
 
 .testimonials-page .page-title {
   margin-bottom: 130px; }
